[package]
name = "agave-snapshot-utils"
description = "Agave snapshot utils"
documentation = "https://docs.rs/agave-snapshot-utils"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
crate-type = ["lib"]
name = "agave_snapshot_utils"

[dependencies]
lz4 = { workspace = true }
strum = { workspace = true, features = ["derive"] }
zstd = { workspace = true }
