[package]
name = "agave-snapshots"
description = "Agave snapshot utils"
documentation = "https://docs.rs/agave-snapshots"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
crate-type = ["lib"]
name = "agave_snapshots"

[features]
agave-unstable-api = []
default = ["agave-unstable-api"]

[dependencies]
assert_matches = { workspace = true }
bzip2 = { workspace = true }
crossbeam-channel = { workspace = true }
log = { workspace = true }
lz4 = { workspace = true }
rand = { workspace = true }
solana-accounts-db = { workspace = true }
solana-genesis-config = { workspace = true }
solana-logger = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tar = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
zstd = { workspace = true }
